--- a/pubs.html
+++ b/pubs.html
@@ -167,6 +167,9 @@
                         value="machine translation|multilingual translation|NMT|SMT|speech translation|speech-to-text translation|speech-to-speech translation|simultaneous translation">
                         Machine Translation</option>
                       <option
+                        value="large language model|pre-trained language model|LLM|language generation model">
+                        Large Language Models</option>
+                      <option
                         value="dialog generation|sentence generation|text generation|headline generation|language generation|news generation|captioning|summarization|bidword generation|story generation|story editing|story rewriting">
                         Text Generation</option>
                       <option value="question answering|machine reading comprehension|reasoning|fact verification">Reasoning
@@ -182,6 +185,9 @@
                         value="time series|time sequence|coevolving sequence|temporal model|dynamical system|ThermoCast">
                         Time
                         Series Analysis</option>
+                      <option value="drug design|drug discovery|protein design|protein discovery">
+                        AI for Science
+                      </option>
                       <option
                         value="image classification|object detection|image segmentation|instance segmentation|visual recognition|visual understanding|image retrieval|video retrieval|video captioning|vision and language">
                         Computer Vision</option>
