--- a/index.html
+++ b/index.html
@@ -100,12 +100,30 @@
                   learning. </p>
                 <p> Topics: </p>
                 <ul>
-                  <li> Multilingual NLP, machine translation, speech
-                    translation, . </li>
-                  <li> LLM: text generation, code generation, reasoning,
-                    privacy, watermark. </li>
-                  <li> AI for drug discovery. </li>
-                  <li> Efficient ML. </li>
+                  <li>Large Language Models</li>
+                  <ul>
+                    <li>LLM agent, code generation, tool use,
+                      cooperation, reasoning, factuality <br>
+                    </li>
+                    <li>security, privacy, copyright of LLM&nbsp; </li>
+                    <li>Efficient LLM Systems<br>
+                    </li>
+                  </ul>
+                  <li>Multilingual NLP</li>
+                  <ul>
+                    <li>machine translation</li>
+                    <li>speech translation, . </li>
+                  </ul>
+                  <ul>
+                    <li>multilingual transfer<br>
+                    </li>
+                  </ul>
+                  <li> AI for Science</li>
+                  <ul>
+                    <li>AI for Drug discovery, Molecule Design</li>
+                    <li>Generative Algorithms for Protein Design<br>
+                    </li>
+                  </ul>
                   <!-- <li> Green and Efficient ML </li>
                                       <li> Time series mining and prediction </li>
                                       <li> Probabilistic inference, Bayesian sampling methods </li> -->
@@ -131,6 +149,17 @@
             <div class="tab-content">
               <div class="tab-pane active" id="news">
                 <ul>
+                  <li><img
+                      src="file:///Users/leili/workspace/leili-docs/web/images/new-icon.gif"
+                      style="height:1.2em"> One paper is accepted by
+                    ICLR 2024 about LLM watermark to detect AI generated
+                    text. <br>
+                  </li>
+                  <li><img
+                      src="file:///Users/leili/workspace/leili-docs/web/images/new-icon.gif"
+                      style="height:1.2em"> One paper is accepted by
+                    AAAI 2024 LLM for wildlife conservation.<br>
+                  </li>
                   <li><img
                       src="file:///Users/leili/workspace/leili-docs/web/images/new-icon.gif"
                       style="height:1.2em"> Four papers are accepted to
@@ -190,11 +219,13 @@
                       correction on factual knowledge</a>, <a
                       href="https://arxiv.org/abs/2210.05035">Unsupervised
 
+
                       Text Generation Metric - SEScore</a>. </li>
                   <li>Our paper on <i>accelerated training of
                       Transformers on GPUs</i> is accepted to SC 2022.
                     The opensource software is released at <a
                       href="https://github.com/bytedance/lightseq">github
+
 
                       link</a> </li>
                   <li>Our paper <i>analyzing the user engagement and
@@ -215,13 +246,16 @@
                       href="https://sites.google.com/view/bridge-pmr">bridge
 
 
+
                       construction robot</a> is accepted to ICRA 2022. </li>
                   <li>Two papers is accepted to ICLR 2022. about <a
                       href="https://openreview.net/forum?id=OjPmfr9GkVv">multilingual
 
 
+
                       NLP</a> and <a
                       href="https://openreview.net/forum?id=5HvpvYd68b">multilingual
+
 
 
                       translation</a>. </li>
@@ -229,12 +263,15 @@
                     include <a href="https://arxiv.org/abs/2012.13577">natural
 
 
+
                       language reasoning for fact verification</a>, <a
                       href="https://arxiv.org/abs/2012.13577">unsupervised
 
 
+
                       counterfactual story editing</a>, and <a
                       href="https://arxiv.org/abs/2110.07515">non-autoregressive
+
 
 
                       translation</a>. </li>
@@ -402,6 +439,7 @@
               <div class="l-footer-item">
                 <h4 class="rectangle"> Office </h4>
                 <p class="address-title h5"> <span itemprop="address">GHC
+
 
                     6403 </span> </p>
               </div>
