--- a/index.html
+++ b/index.html
@@ -102,26 +102,22 @@
                 <ul>
                   <li>Large Language Models</li>
                   <ul>
-                    <li>LLM agent, code generation, tool use,
-                      cooperation, reasoning, factuality <br>
+                    <li>LLM agent: code generation, tool use,
+                      cooperation, reasoning<br>
                     </li>
-                    <li>security, privacy, copyright of LLM&nbsp; </li>
+                    <li>Security, Privacy, Copyright of LLMs&nbsp; </li>
                     <li>Efficient LLM Systems<br>
                     </li>
                   </ul>
                   <li>Multilingual NLP</li>
                   <ul>
                     <li>machine translation</li>
-                    <li>speech translation, . </li>
-                  </ul>
-                  <ul>
-                    <li>multilingual transfer<br>
-                    </li>
+                    <li>speech translation </li>
                   </ul>
                   <li> AI for Science</li>
                   <ul>
-                    <li>AI for Drug discovery, Molecule Design</li>
-                    <li>Generative Algorithms for Protein Design<br>
+                    <li>AI for Drug Discovery</li>
+                    <li>Protein Design<br>
                     </li>
                   </ul>
                   <!-- <li> Green and Efficient ML </li>
@@ -134,7 +130,7 @@
             <div class="photo-box-container">
               <div class="photo-box"> <img draggable="false"
                   aria-hidden="true" src="leili-pic1.jpg" alt=""
-                  width="496" height="496"> </div>
+                  height="496" width="496"> </div>
             </div>
           </div>
         </section>
@@ -149,19 +145,16 @@
             <div class="tab-content">
               <div class="tab-pane active" id="news">
                 <ul>
-                  <li><img
-                      src="file:///Users/leili/workspace/leili-docs/web/images/new-icon.gif"
+                  <li><img src="images/new-icon.gif"
                       style="height:1.2em"> One paper is accepted by
                     ICLR 2024 about LLM watermark to detect AI generated
                     text. <br>
                   </li>
-                  <li><img
-                      src="file:///Users/leili/workspace/leili-docs/web/images/new-icon.gif"
+                  <li><img src="images/new-icon.gif"
                       style="height:1.2em"> One paper is accepted by
                     AAAI 2024 LLM for wildlife conservation.<br>
                   </li>
-                  <li><img
-                      src="file:///Users/leili/workspace/leili-docs/web/images/new-icon.gif"
+                  <li><img src="images/new-icon.gif"
                       style="height:1.2em"> Four papers are accepted to
                     EMNLP 2023 (including two to Findings). <a
                       moz-do-not-send="true"
@@ -175,8 +168,7 @@
                       moz-do-not-send="true"
                       href="https://arxiv.org/abs/2305.13140">adpating
                       NLP encoders to generators</a> </li>
-                  <li><img
-                      src="file:///Users/leili/workspace/leili-docs/web/images/new-icon.gif"
+                  <li><img src="images/new-icon.gif"
                       style="height:1.2em"> Two papers are accepted to
                     NeurIPS2023. <a moz-do-not-send="true"
                       href="https://arxiv.org/abs/2305.14591">LLM Code
@@ -220,11 +212,15 @@
                       href="https://arxiv.org/abs/2210.05035">Unsupervised
 
 
+
+
                       Text Generation Metric - SEScore</a>. </li>
                   <li>Our paper on <i>accelerated training of
                       Transformers on GPUs</i> is accepted to SC 2022.
                     The opensource software is released at <a
                       href="https://github.com/bytedance/lightseq">github
+
+
 
 
                       link</a> </li>
@@ -247,14 +243,20 @@
 
 
 
+
+
                       construction robot</a> is accepted to ICRA 2022. </li>
                   <li>Two papers is accepted to ICLR 2022. about <a
                       href="https://openreview.net/forum?id=OjPmfr9GkVv">multilingual
 
 
 
+
+
                       NLP</a> and <a
                       href="https://openreview.net/forum?id=5HvpvYd68b">multilingual
+
+
 
 
 
@@ -264,13 +266,19 @@
 
 
 
+
+
                       language reasoning for fact verification</a>, <a
                       href="https://arxiv.org/abs/2012.13577">unsupervised
 
 
 
+
+
                       counterfactual story editing</a>, and <a
                       href="https://arxiv.org/abs/2110.07515">non-autoregressive
+
+
 
 
 
@@ -439,6 +447,8 @@
               <div class="l-footer-item">
                 <h4 class="rectangle"> Office </h4>
                 <p class="address-title h5"> <span itemprop="address">GHC
+
+
 
 
                     6403 </span> </p>
