--- a/index.html
+++ b/index.html
@@ -145,6 +145,16 @@
             <div class="tab-content">
               <div class="tab-pane active" id="news">
                 <ul>
+                  <li><img
+                      src="file:///Users/leili/workspace/leili-docs/web/images/new-icon.gif"
+                      style="height:1.2em"> Two papers are accepted by
+                    NAACL 2024 - Findings, about <a
+                      moz-do-not-send="true"
+                      href="https://arxiv.org/abs/2311.09336">refinement
+                      for LLM</a> and <a moz-do-not-send="true"
+                      href="https://arxiv.org/abs/2304.04675">evaluating
+                      LLM for multilingual translation</a>. <br>
+                  </li>
                   <li><img src="images/new-icon.gif"
                       style="height:1.2em"> One paper is accepted by
                     ICLR 2024 about LLM watermark to detect AI generated
@@ -214,11 +224,13 @@
 
 
 
+
                       Text Generation Metric - SEScore</a>. </li>
                   <li>Our paper on <i>accelerated training of
                       Transformers on GPUs</i> is accepted to SC 2022.
                     The opensource software is released at <a
                       href="https://github.com/bytedance/lightseq">github
+
 
 
 
@@ -245,6 +257,7 @@
 
 
 
+
                       construction robot</a> is accepted to ICRA 2022. </li>
                   <li>Two papers is accepted to ICLR 2022. about <a
                       href="https://openreview.net/forum?id=OjPmfr9GkVv">multilingual
@@ -253,8 +266,10 @@
 
 
 
+
                       NLP</a> and <a
                       href="https://openreview.net/forum?id=5HvpvYd68b">multilingual
+
 
 
 
@@ -268,6 +283,7 @@
 
 
 
+
                       language reasoning for fact verification</a>, <a
                       href="https://arxiv.org/abs/2012.13577">unsupervised
 
@@ -275,8 +291,10 @@
 
 
 
+
                       counterfactual story editing</a>, and <a
                       href="https://arxiv.org/abs/2110.07515">non-autoregressive
+
 
 
 
@@ -447,6 +465,7 @@
               <div class="l-footer-item">
                 <h4 class="rectangle"> Office </h4>
                 <p class="address-title h5"> <span itemprop="address">GHC
+
 
 
 
