adding icml and acl papers

--- a/index.html
+++ b/index.html
@@ -93,44 +93,25 @@
               <div class="hero-content">
                 <h1>Lei Li</h1>
                 <h6>Carnegie Mellon University</h6>
-                <p><a href="http://lti.cs.cmu.edu/">Language Technology
-                    Institute</a><br>
-                  Assistant Professor </p>
-                <p>Research area: natural language processing, machine
-                  learning. </p>
-                <p> Topics: </p>
-                <ul>
-                  <li>Large Language Models</li>
-                  <ul>
-                    <li>LLM agent: code generation, tool use,
-                      cooperation, reasoning<br>
-                    </li>
-                    <li>Security, Privacy, Copyright of LLMs&nbsp; </li>
-                    <li>Efficient LLM Systems<br>
-                    </li>
-                  </ul>
-                  <li>Multilingual NLP</li>
-                  <ul>
-                    <li>machine translation</li>
-                    <li>speech translation </li>
-                  </ul>
-                  <li> AI for Science</li>
-                  <ul>
-                    <li>AI for Drug Discovery</li>
-                    <li>Protein Design<br>
-                    </li>
-                  </ul>
-                  <!-- <li> Green and Efficient ML </li>
-                                      <li> Time series mining and prediction </li>
-                                      <li> Probabilistic inference, Bayesian sampling methods </li> -->
-                </ul>
+                <br>
+                <p> I am an Assistant Professor in the School of
+                  Computer Science Language Technologies Institute at
+                  Carnegie Mellon University. I am also affiliated with
+                  CMU <a moz-do-not-send="true"
+                    href="https://www.cylab.cmu.edu/">CyLab and UC Santa Barbara Computer Science Department</a>. I work
+                  on generative AI for language and science. including
+                  multilingual NLP, machine translation (text, speech),
+                  security of large language models, LLM agents, and AI
+                  for drug discovery and protein design. <br>
+                </p>
+                <br>
                 <p> <a href="leili-bio.html">Bio</a> </p>
               </div>
             </div>
             <div class="photo-box-container">
               <div class="photo-box"> <img draggable="false"
                   aria-hidden="true" src="leili-pic1.jpg" alt=""
-                  height="496" width="496"> </div>
+                  width="496" height="496"> </div>
             </div>
           </div>
         </section>
@@ -145,9 +126,42 @@
             <div class="tab-content">
               <div class="tab-pane active" id="news">
                 <ul>
-                  <li><img
-                      src="file:///Users/leili/workspace/leili-docs/web/images/new-icon.gif"
-                      style="height:1.2em"> Two papers are accepted by
+                  <li><img src="images/new-icon.gif"
+                      style="height:1.2em">One paper is accepted by KDD
+                    2024 about Counterfactual Molecule Property
+                    Explanation through Reinforcement Learning. <br>
+                  </li>
+                  <li><img src="images/new-icon.gif"
+                      style="height:1.2em">Three papers are accepted by
+                    ACL 2024 (including two Findings), topics including
+                    <a moz-do-not-send="true"
+                      href="https://arxiv.org/abs/2402.11436">Self-bias
+                      in LLM</a>, <a moz-do-not-send="true"
+                      href="https://arxiv.org/abs/2402.18025">LLM for
+                      translating any language </a>(even endangered
+                    languages), and <a moz-do-not-send="true"
+                      href="https://arxiv.org/abs/2311.09071">Understanding
+
+
+
+
+
+                      LLaMA's Multilingual capability by analyzing its
+                      vocabulary</a>. <br>
+                  </li>
+                  <li><img src="images/new-icon.gif"
+                      style="height:1.2em">Three papers are accepted by
+                    ICML 2024, topics including protein design (<a
+                      moz-do-not-send="true"
+                      href="https://arxiv.org/abs/2405.06693">SurfPro</a>
+                    and <a moz-do-not-send="true"
+                      href="https://arxiv.org/abs/2405.08205">EnzyGen</a>)
+                    and <a moz-do-not-send="true"
+                      href="https://arxiv.org/abs/2402.09910">copyright
+                      content detection in LLM training.</a><br>
+                  </li>
+                  <li><img src="images/new-icon.gif"
+                      style="height:1.2em">Two papers are accepted by
                     NAACL 2024 - Findings, about <a
                       moz-do-not-send="true"
                       href="https://arxiv.org/abs/2311.09336">refinement
@@ -164,10 +178,8 @@
                       style="height:1.2em"> One paper is accepted by
                     AAAI 2024 LLM for wildlife conservation.<br>
                   </li>
-                  <li><img src="images/new-icon.gif"
-                      style="height:1.2em"> Four papers are accepted to
-                    EMNLP 2023 (including two to Findings). <a
-                      moz-do-not-send="true"
+                  <li>Four papers are accepted to EMNLP 2023 (including
+                    two to Findings). <a moz-do-not-send="true"
                       href="https://arxiv.org/abs/2305.13829">Using
                       Study Assistant to Correct LLM Mistakes</a>, <a
                       moz-do-not-send="true"
@@ -178,24 +190,26 @@
                       moz-do-not-send="true"
                       href="https://arxiv.org/abs/2305.13140">adpating
                       NLP encoders to generators</a> </li>
-                  <li><img src="images/new-icon.gif"
-                      style="height:1.2em"> Two papers are accepted to
-                    NeurIPS2023. <a moz-do-not-send="true"
+                  <li>Two papers are accepted to NeurIPS2023. <a
+                      moz-do-not-send="true"
                       href="https://arxiv.org/abs/2305.14591">LLM Code
                       Generation for Algorithmic problems</a>, and <a
                       moz-do-not-send="true"
                       href="https://arxiv.org/abs/2305.10519">Assessing
                       Knowledge in LLMs</a>. <br>
                   </li>
-                  <li><img src="images/new-icon.gif"
-                      style="height:1.2em"> New paper about <a
+                  <li>New paper about <a
                       href="https://arxiv.org/abs/2212.09450">designing
                       peptides to kill bacteria</a> is accepted to KDD
                     2023. </li>
-                  <li><img src="images/new-icon.gif"
-                      style="height:1.2em"> 5 new papers are accepted to
-                    ACL 2023. Topics include <a
-                      href="https://arxiv.org/abs/2212.09359">Speech
+                  <li>5 new papers are accepted to ACL 2023. Topics
+                    include <a href="https://arxiv.org/abs/2212.09359">Speech
+
+
+
+
+
+
                       Translation</a>, <a
                       href="https://arxiv.org/abs/2212.09305">Evaluation
                       metric SEScore2</a>, <a
@@ -205,10 +219,14 @@
                       LLM</a>, <a
                       href="https://arxiv.org/abs/2305.05976">Negative
                       Knowledge in LLM</a>. </li>
-                  <li><img src="images/new-icon.gif"
-                      style="height:1.2em"> 3 new papers are accepted to
-                    ICML 2023. Topics include <a
-                      href="https://arxiv.org/abs/2305.00386">Protein
+                  <li>3 new papers are accepted to ICML 2023. Topics
+                    include <a href="https://arxiv.org/abs/2305.00386">Protein
+
+
+
+
+
+
                       Design</a>, <a
                       href="https://arxiv.org/abs/2302.03162">Watermark
                       for Language Generation</a>, <a
@@ -225,11 +243,25 @@
 
 
 
+
+
+
+
+
+
+
                       Text Generation Metric - SEScore</a>. </li>
                   <li>Our paper on <i>accelerated training of
                       Transformers on GPUs</i> is accepted to SC 2022.
                     The opensource software is released at <a
                       href="https://github.com/bytedance/lightseq">github
+
+
+
+
+
+
+
 
 
 
@@ -258,6 +290,13 @@
 
 
 
+
+
+
+
+
+
+
                       construction robot</a> is accepted to ICRA 2022. </li>
                   <li>Two papers is accepted to ICLR 2022. about <a
                       href="https://openreview.net/forum?id=OjPmfr9GkVv">multilingual
@@ -267,8 +306,22 @@
 
 
 
+
+
+
+
+
+
+
                       NLP</a> and <a
                       href="https://openreview.net/forum?id=5HvpvYd68b">multilingual
+
+
+
+
+
+
+
 
 
 
@@ -284,6 +337,13 @@
 
 
 
+
+
+
+
+
+
+
                       language reasoning for fact verification</a>, <a
                       href="https://arxiv.org/abs/2012.13577">unsupervised
 
@@ -292,8 +352,22 @@
 
 
 
+
+
+
+
+
+
+
                       counterfactual story editing</a>, and <a
                       href="https://arxiv.org/abs/2110.07515">non-autoregressive
+
+
+
+
+
+
+
 
 
 
@@ -412,6 +486,14 @@
               </div>
               <div class="tab-pane" id="papers">
                 <ul>
+                  <li> LLM Reasoning (weak LLM helps strong LLM). [<a
+                      href="https://arxiv.org/abs/2305.13829">arxiv</a>]
+                  </li>
+                  <li> LLM Watermark: <a
+                      href="https://arxiv.org/abs/2306.17439">Unigram-Watermark</a>
+                    to detect AI generated text, and <a
+                      href="https://arxiv.org/abs/2302.03162">GINSEW</a>
+                    to defend against model extraction attack. </li>
                   <li> CGMH: A method for controllable text generation
                     from specified keywords. [<a
                       href="https://arxiv.org/abs/1811.10996">arxiv</a>]
@@ -465,6 +547,13 @@
               <div class="l-footer-item">
                 <h4 class="rectangle"> Office </h4>
                 <p class="address-title h5"> <span itemprop="address">GHC
+
+
+
+
+
+
+
 
 
 
