fix pub category

--- a/pubs.html
+++ b/pubs.html
@@ -185,7 +185,7 @@
                         value="time series|time sequence|coevolving sequence|temporal model|dynamical system|ThermoCast">
                         Time
                         Series Analysis</option>
-                      <option value="drug design|drug discovery|protein design|protein discovery">
+                      <option value="drug design|drug discovery|protein design|protein discovery|protein optimization|enzyme|DNA|RNA|substrate|ligand">
                         AI for Science
                       </option>
                       <option
