--- a/pubs.html
+++ b/pubs.html
@@ -167,7 +167,7 @@
                         value="machine translation|multilingual translation|NMT|SMT|speech translation|speech-to-text translation|speech-to-speech translation|simultaneous translation">
                         Machine Translation</option>
                       <option
-                        value="large language model|pre-trained language model|LLM|language generation model">
+                        value="large language model|large language models|pre-trained language model|LLM|LLMs|language generation model">
                         Large Language Models</option>
                       <option
                         value="dialog generation|sentence generation|text generation|headline generation|language generation|news generation|captioning|summarization|bidword generation|story generation|story editing|story rewriting">
@@ -181,13 +181,14 @@
                       <option
                         value="BLOG|bayesian|probabilsitic inference|probabilistic model|graphical model|Monte Carlo|Monte-Carlo|VAE|Metropolis-Hastings|Gibbs sampling|MCMC|variational inference">
                         Probabilistic Modelling and Inference</option>
+                      <option value="drug design|drug discovery|protein|molecule|enzyme|DNA|RNA|substrate|ligand">
+                          AI for Science
+                      </option>
                       <option
                         value="time series|time sequence|coevolving sequence|temporal model|dynamical system|ThermoCast">
                         Time
                         Series Analysis</option>
-                      <option value="drug design|drug discovery|protein design|protein discovery|protein optimization|enzyme|DNA|RNA|substrate|ligand">
-                        AI for Science
-                      </option>
+
                       <option
                         value="image classification|object detection|image segmentation|instance segmentation|visual recognition|visual understanding|image retrieval|video retrieval|video captioning|vision and language">
                         Computer Vision</option>
