--- a/pubs.html
+++ b/pubs.html
@@ -181,7 +181,7 @@
                       <option
                         value="BLOG|bayesian|probabilsitic inference|probabilistic model|graphical model|Monte Carlo|Monte-Carlo|VAE|Metropolis-Hastings|Gibbs sampling|MCMC|variational inference">
                         Probabilistic Modelling and Inference</option>
-                      <option value="drug design|drug discovery|protein|molecule|enzyme|DNA|RNA|substrate|ligand">
+                      <option value="drug design|drug discovery|protein design|design protein|molecule generation|enzyme design|design enzyme|protein sequence|DNA sequence|RNA sequence">
                           AI for Science
                       </option>
                       <option
