--- a/teaching.html
+++ b/teaching.html
@@ -82,6 +82,7 @@
 
 
 
+
                   11868 Large Language Model Systems (graduate, Spring
                   2024)</a><br>
               </li>
@@ -107,8 +108,14 @@
               <h1>Tutorial</h1>
             </div>
             <ul>
+              <li><a moz-do-not-send="true"
+                  href="https://luka-group.github.io/tutorials/tutorial.202406.html">NAACL
+                  2024 Tutorial: Combating Security and Privacy Issues
+                  in the Era of Large Language Models</a><br>
+              </li>
               <li><a
                   href="https://sites.cs.ucsb.edu/%7Elilei/TALKS/2021-ACL/">ACL2021
+
 
 
 
@@ -128,6 +135,7 @@ href="TALKS/deep_learning_for_answering_questions_leili_nlpcc_adl2016.pdf">Slide
 
 
 
+
                   Modeling using Bayesian Logic (BLOG) </a> . </li>
               <li> <a href="TALKS/2010-KDD/">KDD 2010 Tutorial on Time
                   Series</a></li>
@@ -143,6 +151,7 @@ href="TALKS/deep_learning_for_answering_questions_leili_nlpcc_adl2016.pdf">Slide
               <li>Michigan State University Guest Lecture: <a
                   moz-do-not-send="true"
                   href="TALKS/LLM_assessment_improving_2024.4.pdf">Assessing
+
                   and Improving Large Language Models</a>. 2024.4.1.<br>
               </li>
               <li>CMU CyLab Seminar: <a moz-do-not-send="true"
@@ -154,6 +163,7 @@ href="TALKS/deep_learning_for_answering_questions_leili_nlpcc_adl2016.pdf">Slide
               <li>Ohio State University TDAI's&nbsp;Foundations of Data
                 Science and AI Speaker: <a moz-do-not-send="true"
                   href="TALKS/Cooperative_LLM_leili_2024.1.pdf">Self-assisting
+
 
                   and Cooperative Large Language Models. </a>2024.1.12
                 (also given at NUS in 2023.12)<br>
@@ -179,6 +189,7 @@ href="TALKS/interpretable_machine_learning_for_NLG_neurips_meetup_2020.12.06.pdf
 
 
 
+
                   Controllable, and Interpretable Machine Learning for
                   Natural Language Generation</a>. 2020.12.06 (30 mins).</li>
               <li><a
@@ -187,10 +198,12 @@ href="TALKS/constrained_text_generation_monte_carlo_meets_neural_nets_2020.10.8.
 
 
 
+
                   Text Generation - Monte Carlo Meets Neural Nets</a>.
                 Tsinghua University. IIIS. 2020.10.8 (1hr)</li>
               <li><a
 href="TALKS/interpretable_machine_learning_for_nlg_tsinghua_2020.10.8.pdf">Scalable,
+
 
 
 
@@ -215,6 +228,7 @@ href="TALKS/interpretable_machine_learning_for_nlg_tsinghua_2020.10.8.pdf">Scala
               </li>
               <li> 2013 TAMU <a
 href="http://cesg.tamu.edu/seminar/fishbowl-teleseminar-fast-algorithms-for-mining-co-evolving-time-series/">Fish
+
 
 
 
