--- a/teaching.html
+++ b/teaching.html
@@ -83,6 +83,8 @@
 
 
 
+
+
                   11868 Large Language Model Systems (graduate, Spring
                   2024)</a><br>
               </li>
@@ -108,13 +110,22 @@
               <h1>Tutorial</h1>
             </div>
             <ul>
+              <li>ACL 2024 Tutorial: <a moz-do-not-send="true"
+                  href="https://leililab.github.io/llm_watermark_tutorial/">Watermarking
+
+                  for Large Language Models</a>.<br>
+              </li>
               <li><a moz-do-not-send="true"
                   href="https://luka-group.github.io/tutorials/tutorial.202406.html">NAACL
+
+
                   2024 Tutorial: Combating Security and Privacy Issues
                   in the Era of Large Language Models</a><br>
               </li>
               <li><a
                   href="https://sites.cs.ucsb.edu/%7Elilei/TALKS/2021-ACL/">ACL2021
+
+
 
 
 
@@ -136,6 +147,8 @@ href="TALKS/deep_learning_for_answering_questions_leili_nlpcc_adl2016.pdf">Slide
 
 
 
+
+
                   Modeling using Bayesian Logic (BLOG) </a> . </li>
               <li> <a href="TALKS/2010-KDD/">KDD 2010 Tutorial on Time
                   Series</a></li>
@@ -148,9 +161,14 @@ href="TALKS/deep_learning_for_answering_questions_leili_nlpcc_adl2016.pdf">Slide
               <h1>Talks</h1>
             </div>
             <ul>
+              <li>ACL 2024 Language+Molecule workshop: A Tale of Two
+                Realms: Commonalities and Distinctions of Generating
+                Language and Molecules. Aug 15, 2024. </li>
               <li>Michigan State University Guest Lecture: <a
                   moz-do-not-send="true"
                   href="TALKS/LLM_assessment_improving_2024.4.pdf">Assessing
+
+
 
                   and Improving Large Language Models</a>. 2024.4.1.<br>
               </li>
@@ -163,6 +181,8 @@ href="TALKS/deep_learning_for_answering_questions_leili_nlpcc_adl2016.pdf">Slide
               <li>Ohio State University TDAI's&nbsp;Foundations of Data
                 Science and AI Speaker: <a moz-do-not-send="true"
                   href="TALKS/Cooperative_LLM_leili_2024.1.pdf">Self-assisting
+
+
 
 
                   and Cooperative Large Language Models. </a>2024.1.12
@@ -190,6 +210,8 @@ href="TALKS/interpretable_machine_learning_for_NLG_neurips_meetup_2020.12.06.pdf
 
 
 
+
+
                   Controllable, and Interpretable Machine Learning for
                   Natural Language Generation</a>. 2020.12.06 (30 mins).</li>
               <li><a
@@ -199,10 +221,14 @@ href="TALKS/constrained_text_generation_monte_carlo_meets_neural_nets_2020.10.8.
 
 
 
+
+
                   Text Generation - Monte Carlo Meets Neural Nets</a>.
                 Tsinghua University. IIIS. 2020.10.8 (1hr)</li>
               <li><a
 href="TALKS/interpretable_machine_learning_for_nlg_tsinghua_2020.10.8.pdf">Scalable,
+
+
 
 
 
@@ -228,6 +254,8 @@ href="TALKS/interpretable_machine_learning_for_nlg_tsinghua_2020.10.8.pdf">Scala
               </li>
               <li> 2013 TAMU <a
 href="http://cesg.tamu.edu/seminar/fishbowl-teleseminar-fast-algorithms-for-mining-co-evolving-time-series/">Fish
+
+
 
 
 
