adding the recent talks

--- a/teaching.html
+++ b/teaching.html
@@ -112,25 +112,15 @@
             <ul>
               <li>ACL 2024 Tutorial: <a moz-do-not-send="true"
                   href="https://leililab.github.io/llm_watermark_tutorial/">Watermarking
-
                   for Large Language Models</a>.<br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://luka-group.github.io/tutorials/tutorial.202406.html">NAACL
-
-
                   2024 Tutorial: Combating Security and Privacy Issues
                   in the Era of Large Language Models</a><br>
               </li>
               <li><a
                   href="https://sites.cs.ucsb.edu/%7Elilei/TALKS/2021-ACL/">ACL2021
-
-
-
-
-
-
-
                   Tutorial: Pre-training methods for Neural Machine
                   Translation</a></li>
               <li><a href="TALKS/2019-EMNLP">EMNLP 2019 Tutorial on
@@ -143,12 +133,6 @@
 href="TALKS/deep_learning_for_answering_questions_leili_nlpcc_adl2016.pdf">Slides</a>]</li>
               <li>2014 PPAML Summer School Tutorial: <a
                   href="http://bayesianlogic.github.io/download/BLOG-tutorial-2014.pdf">Probabilistic
-
-
-
-
-
-
                   Modeling using Bayesian Logic (BLOG) </a> . </li>
               <li> <a href="TALKS/2010-KDD/">KDD 2010 Tutorial on Time
                   Series</a></li>
@@ -161,6 +145,10 @@ href="TALKS/deep_learning_for_answering_questions_leili_nlpcc_adl2016.pdf">Slide
               <h1>Talks</h1>
             </div>
             <ul>
+              <li>Univ. of Pittsburgh ISP Seminar: <a href="TALKS/LLM_Evaluation_and_alignment2024.10.pdf">The Science of Evaluation
+                and Alignment for Large Language Models</a>. Oct 25, 2024. </li>
+              <li>CMU LTI Colloquium: <a href="TALKS/GenAI_from_words_to_molecules_leili2024.9.pdf">From Words to Molecules -  Harnessing Generative AI for
+                Breakthroughs in Language and Molecular Design</a>. Sep 13, 2024.</li>
               <li>ACL 2024 Language+Molecule workshop: A Tale of Two
                 Realms: Commonalities and Distinctions of Generating
                 Language and Molecules. Aug 15, 2024. </li>
