--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
                 <h1>Lei Li</h1>
                 <h6>Carnegie Mellon University</h6>
                 <br>
-                <p> I am an Assistant Professor in the School of
-                  Computer Science Language Technologies Institute at
+                <p> I am an Assistant Professor in the <a href="https://www.lti.cs.cmu.edu/">Language Technologies Institute</a> of the School of
+                  Computer Science at
                   Carnegie Mellon University. I am also affiliated with
                   CMU <a moz-do-not-send="true"
-                    href="https://www.cylab.cmu.edu/">CyLab and UC Santa Barbara Computer Science Department</a>. I work
+                    href="https://www.cylab.cmu.edu/">CyLab</a> and University of California Santa Barbara Computer Science Department. I work
                   on generative AI for language and science. including
                   multilingual NLP, machine translation (text, speech),
-                  security of large language models, LLM agents, and AI
+                  security of large language models, agentic LLM, and AI
                   for drug discovery and protein design. <br>
                 </p>
                 <br>
@@ -126,6 +126,15 @@
             <div class="tab-content">
               <div class="tab-pane active" id="news">
                 <ul>
+                  <li>
+                    <img src="images/new-icon.gif"
+                      style="height:1.2em">Two papers are accepted by NeurIPS 2024. Topics include GenAI watermark and LLM reasoning in non-English languages. 
+                  </li>
+                  <li>
+                    <img src="images/new-icon.gif"
+                      style="height:1.2em">Seven papers are accepted by EMNLP 2024, including three main, three Findings, and one system demo papers. 
+                      Topics include LLM preference learning, multilingual LLM training (LLaMAX), evaluation, and multimodal LLM.  
+                  </li>
                   <li><img src="images/new-icon.gif"
                       style="height:1.2em">One paper is accepted by KDD
                     2024 about Counterfactual Molecule Property
