--- a/teaching.html
+++ b/teaching.html
@@ -145,8 +145,10 @@ href="TALKS/deep_learning_for_answering_questions_leili_nlpcc_adl2016.pdf">Slide
               <h1>Talks</h1>
             </div>
             <ul>
+              <li>University of Massachusetts Boston Invited Talk: <a href="TALKS/multilingual-LLM-leili2024.11.pdf">Towards Scaling Large Language Models to 1000 Languages - Challenges and Advances</a>. Nov 4, 2024. </li>
+              <li>Invited talk at MIT FutureTech Workshop on the Role of AI in Science: <a href="TALKS/Watermarking_and_AI_detection_leili2024.11.3.pdf"> Watermarking and Detecting AI Generation. Nov 3, 2024. </a></li>
               <li>Univ. of Pittsburgh ISP Seminar: <a href="TALKS/LLM_Evaluation_and_alignment2024.10.pdf">The Science of Evaluation
-                and Alignment for Large Language Models</a>. Oct 25, 2024. </li>
+                and Alignment for Large Language Models</a>. Oct 25, 2024. also delivered at Northeastern University. Nov 4, 2024. </li>
               <li>CMU LTI Colloquium: <a href="TALKS/GenAI_from_words_to_molecules_leili2024.9.pdf">From Words to Molecules -  Harnessing Generative AI for
                 Breakthroughs in Language and Molecular Design</a>. Sep 13, 2024.</li>
               <li>ACL 2024 Language+Molecule workshop: A Tale of Two
