--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           <li class="current-menu-item"><a href="index.html">Home</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="teaching.html">Teaching</a></li>
-          <li> <a href="pubs.html">Publications</a> </li>
-          <li><a href="people.html">People</a></li>
+          <!-- <li> <a href="pubs.html">Publications</a> </li> -->
+          <li><a href="https://leililab.github.io">Group</a></li>
           <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
         </ul>
       </nav>
